--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,10 @@
-/* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-:root {
-	/* Colors */
-	--main-color-pink: 	      #F277DE;
-	--secondary-color-yellow: #EBF28F;
-	--secondary-color-salmon: #F28883;
-	--secondary-color-green:  #5EF296;
-	--secondary-color-purple: #B56BF2;
-	--text-color-white: #fff;
-	--text-color-black: #000;
-
-	/* Fonts */
-	--roboto-font: 'Roboto', sans-serif;
-
-	/* Shadows */
-	--navbar-shadow: 8px 8px 0px #000000;
-	--navbar-text-shadow: -4px 4px 0px #000000;
-}
-
-html {
-	scroll-behavior: smooth;
-}
-
-body {
-	margin: 0;
-
-	width: 100%;
-	height: 100vh;
-
-	font-family: var(--roboto-font);
+@layer base {
+	html {
+		font-family: 'Roboto', sans-serif;
+		scroll-behavior: smooth;
+	}
 }
